# ZeroInterestDeFi

./: .dockerignore  .gitignore  README.md  craco.config.js  docker-compose.yaml  id.json  package-lock.json  package.json
.github/workflows/: rust.yml
anchor/: .env.example
anchor/api-server/: .env  app.js  index.js  package.json  properties.js  swagger.yaml
anchor/api-server/classes/: ErrorManager.js  ErrorMessages.js  Errors.js  Logger.js  SafeError.js  Server.js  ValueAlreadyUsedError.js
anchor/api-server/controllers/: PythController.js  SecurityController.js
anchor/api-server/security/: SecurityManager.js
anchor/api-server/utils/: roles.js
anchor/oracles/pyth/: tsconfig.json
anchor/oracles/pyth/.anchor/: test-ledger-log.txt
anchor/oracles/pyth/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  validator-keypair.json  vote-account-keypair.json
anchor/oracles/pyth/.anchor/test-ledger/.tmp4Agi2y/rocksdb/: IDENTITY  LOG
anchor/oracles/pyth/.anchor/test-ledger/rocksdb/: 000034.sst  000035.sst  000036.sst  000037.sst  000038.sst  000039.sst  000040.sst  LOG  MANIFEST-000041  OPTIONS-000036
anchor/oracles/pyth/programs/pyth/: Cargo.toml
anchor/oracles/pyth/programs/pyth/src/: lib.rs  pc.rs
anchor/oracles/pyth/tests/: oracleUtils.js  pyth.js  pyth.spec.js
anchor/reward-token/: .gitignore
anchor/reward-token/programs/reward-token-staking/: Cargo.toml
anchor/reward-token/programs/reward-token-staking/src/: lib.rs
anchor/reward-token/tests/: stake.js
anchor/zero/: .gitignore
anchor/zero/programs/zero/: Cargo.toml
anchor/zero/programs/zero/src/: handler_borrow_stablecoin.rs  handler_initialize_market.rs  lib.rs  math.rs  pda.rs  trash.rs
anchor/zero/src/: error.rs  handler_deposit_collateral.rs  handler_initialize_trove.rs  lib.rs
api-server/: .env  Dockerfile  app.js  package-lock.json  package.json  properties.js  swagger.yaml
api-server/classes/: ErrorManager.js  ErrorMessages.js  Server.js  ValueAlreadyUsedError.js
api-server/controllers/: PythController.js  SecurityController.js  StakeController.js
api-server/security/: SecurityManager.js
api-server/utils/: roles.js
client/: Dockerfile  craco.config.js  package.json
client/public/: index.html
client/src/: index.css  routes.tsx
client/src/components/Cards/Redeem/: index.tsx
client/src/components/Cards/Staking/: index.tsx
client/src/components/Cards/Statistics/: index.tsx
client/src/components/CurrentUserBadge/: index.tsx
client/src/components/RiskyTrovesTable/: index.tsx
client/src/constants/: labels.ts
client/src/contexts/: roksAccount.tsx  wallet.tsx
client/src/views/: index.tsx
client/src/views/home/: index.tsx
client/test/prep/: ca.crt  ca.key  localhost.csr  localhost.key
docs/: Plan.md
program/: Cargo.toml
program/associated-token-account/: Cargo.toml
program/main/: Cargo.toml
program/main/program/: Cargo.toml
program/main/src/: lib.rs
program/memo/: Cargo.toml
program/tests/: integration.rs
program/token/cli/: Cargo.toml
program/token/perf-monitor/: Cargo.toml
program/token/reward-token/: Cargo.toml
program/token/reward-token/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  staking.rs
program/token/spl/: Cargo.toml
src/: index.css  routes.tsx
src/components/Cards/: index.tsx
src/components/Cards/Bot/: index.tsx
src/components/Cards/Farm/: index.tsx
src/components/Cards/PriceFeed/: index.tsx
src/components/Cards/StabilityPool/: index.tsx
src/components/Cards/Staking/: index.tsx
src/components/Cards/Trove/: index.tsx
src/components/CurrentUserBadge/: index.tsx
src/components/Layout/: index.tsx
src/components/RiskyTrovesTable/: index.tsx
src/contexts/: price.tsx
src/views/: index.tsx
src/views/dashboard/: index.tsx
src/views/farm/: index.tsx
src/views/home/: index.tsx
src/views/oldHome/: index.tsx
src/views/redemption/: index.tsx
src/views/riskyTroves/: index.tsx
src/views/staking/: index.tsx
test/prep/: ca.srl  localhost.crt
workflows/: ci_action.yml
