[package]
name = "zero_percenter"
repository = "https://github.com/puremoney/zerointerestdefi"
version = "0.1.0"
edition = "2018"
license = "GPLv3"
publish = false

[dependencies]
solana-program = "1.6.8"
spl-token = { path = "../../token/program" }

[features]
devnet = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.6.9"
solana-sdk = "1.6.8"

[lib]
crate-type = ["cdylib", "lib"]
