[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "SPL-Token Command-line Utility"
edition = "2018"
homepage = "https://spl.solana.com/token"
license = "Apache-2.0"
name = "spl-token-cli"
repository = "https://github.com/puremoney/zerointerestdefi"
version = "2.0.11"

[dependencies]
clap = "2.33.3"
console = "0.14.0"
serde_json = "1.0.62"
solana-account-decoder = "=1.6.9"
solana-clap-utils = "=1.6.9"
solana-cli-config = "=1.6.9"
solana-cli-output = "=1.6.9"
solana-client = "=1.6.9"
solana-logger = "=1.6.9"
solana-remote-wallet = "=1.6.9"
solana-sdk = "=1.6.9"
spl-token = "=3.1.0" # { version = "3.1", path="../spl", features = [ "no-entrypoint" ] }
spl-associated-token-account = "1.0" # { version = "1.0", path="../../associated-token-account", features = [ "no-entrypoint" ] }
spl-memo = { version = "3.0.1", path="../../memo", features = ["no-entrypoint"] }

[[bin]]
name = "spl-token"
path = "src/main.rs"
