[package]
name = "reward-token"
version = "0.0.1"
description = "Zero Interest DApp Secondary Token"
authors = ["RockStable"]
repository = "https://github.com/puremoney/zerointerestdefi"
license = "GPLv3"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
uint = "0.8"
solana-program = "1.6.9"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
spl-token = "3.1.0" # { version = "3.1", path="../spl", features = [ "no-entrypoint" ] }

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.6.9"
solana-sdk = "1.6.9"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
