[package]
name = "pyth"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.5.0"
pyth-client = "0.1.1"
solana-program = "1.6.9"
arrayref = "0.3.6"
bytemuck = { version = "1.4.0" }
